Bug 134614 - FILESAVE: RTF: Indent in TOC is lost after RT in MSO 2010
Summary: FILESAVE: RTF: Indent in TOC is lost after RT in MSO 2010
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: low minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.8.0 target:26.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-TableofContents
  Show dependency treegraph
 
Reported: 2020-07-07 12:07 UTC by Xisco Faulí
Modified: 2026-04-03 08:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison before and after RT in MSO (63.06 KB, image/png)
2020-07-07 12:07 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-07-07 12:07:24 UTC
Created attachment 162754 [details]
Comparison before and after RT in MSO

Steps to reproduce:
1. Open attachment from bug 
2. Save it to RTF
3. Open the generated file in MSO 2010

-> second line in TOC has no indent. See comparison image

Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 9af38b4504ccda57a0c32eb8bdd03e5a8ca29ddc
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-07-07 12:08:48 UTC
Steps to reproduce:
1. Open attachment 70632 [details] from bug 57589
2. Save it to RTF
3. Open the generated file in MSO 2010
Comment 2 Xisco Faulí 2020-07-07 12:09:56 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5cdb14345842c07eb1a466897753da910e9488f8

author	Mike Kaganski <mike.kaganski@collabora.com>	2019-12-13 09:36:39 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2019-12-16 17:23:57 +0100
commit 5cdb14345842c07eb1a466897753da910e9488f8 (patch)
tree 8060407f05d37aa856096c94ca808330c173135e
parent d396819ce8c8561afcf69c7e0dbfb6108439b4c3 (diff)
tdf#129353, tdf#129402: fix node creation on index import

Bisected with: bibisect-linux64-7.0

Adding Cc: to Mike Kaganski
Comment 3 Xisco Faulí 2020-07-07 13:35:22 UTC
attachment 92638 [details] from bug 72563 is also affected by this issue
Comment 4 QA Administrators 2022-10-20 03:43:49 UTC Comment hidden (obsolete)
Comment 5 Timur 2023-10-09 18:55:47 UTC
Repro with LO 24.2 when opening in MSO. OK in LO and FreeOffice.
Comment 6 QA Administrators 2025-10-09 03:11:29 UTC Comment hidden (obsolete)
Comment 7 Mike Kaganski 2026-03-22 16:18:30 UTC
https://gerrit.libreoffice.org/c/core/+/202379
Comment 8 Commit Notification 2026-03-23 14:46:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e39a2d201ec1cc136e4ef4f4c5b539ab46a55b87

tdf#134614: defer closing TOC field after the last contained \par

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-04-03 08:21:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/e9efa3b88ea33fe557b673895be5f80bd03647d9

tdf#134614: defer closing TOC field after the last contained \par

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.