tdf#134614: defer closing TOC field after the last contained \par

When EndTOX() closed the TOC field during the last paragraph's run, the }}}
went into m_aRunText and ended up before \par, putting the \par outside the
field result. Word then ignored paragraph properties for that last paragraph.

This change defers outputting the closing braces until after \par is written.

Change-Id: I6d7ab3b516e725938fc2151f8ec4f4b834f33068
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202379
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit e39a2d201ec1cc136e4ef4f4c5b539ab46a55b87)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202497
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>